src/syntax_analysis/expressions/pratt_parsing/infix_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case5.snap
---
source: src/syntax_analysis/expressions/pratt_parsing/infix_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand": {
              "PREFIX": {
                "prefix_token": "MINUS",
                "right_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "5"
                      }
                    }
                  }
                }
              }
            },
            "operator_token": "MULTIPLY",
            "right_hand": {
              "INTEGER": {
                "integer_token": {
                  "INTEGER": {
                    "literal": "10"
                  }
                }
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
