src/syntax_analysis/expressions/pratt_parsing/infix_expression/tests/snapshots/rust_monkey_interpreter__syntax_analysis__expressions__pratt_parsing__infix_expression__tests__test_syntax_analysis_for_infix_expression_case9.snap
---
source: src/syntax_analysis/expressions/pratt_parsing/infix_expression/tests/mod.rs
expression: "crate::syntax_analysis::get_abstract_syntax_tree(crate::lexical_analysis::get_tokens(code.to_string()))"
---
{
  "abstract_syntax_tree": [
    {
      "EXPRESSION": {
        "expression": {
          "INFIX": {
            "left_hand": {
              "INFIX": {
                "left_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "10"
                      }
                    }
                  }
                },
                "operator_token": "LESSER_THAN",
                "right_hand": {
                  "INTEGER": {
                    "integer_token": {
                      "INTEGER": {
                        "literal": "5"
                      }
                    }
                  }
                }
              }
            },
            "operator_token": "NOT_EQUALS",
            "right_hand": {
              "BOOLEAN": {
                "boolean_token": "FALSE"
              }
            }
          }
        }
      }
    }
  ],
  "syntax_parsing_errors": []
}
